- Switched to use wxXmlSerializer 1.1.7:
  - Function xsPropertyIO::AddPropertyNode() is now static and takes information about xml node type.
  - Function xsSerializable::GetChild() now allows recursive search.
  - IDs of managed serialized items are now serialized automatically by default (in previous library version this task had to be
    done explicitelly by a user).

- Added wxSFFlexGridShape with a behaviour similar to classic wxFlexGridSizer (each grid's column and row can have different size).
- wxSFShapeBitmap::CreateFromFile() function now takes also bitmap type parameter (use bitmap types supported by wxBitmap class). Previously
  only BMP files were supported.
- wxSFDiagramManager::AddShape(wxClassInfo* shapeInfo, const wxPoint& pos, bool saveState) function doesn't Refresh() new shape anymore
  (the wxSFShapeBase::wxRefresh() must be called explicitelly if neccessary).
- Fixed wxSFGridShape's RTTI information
- Fixed grid shapes minimal size. Even empty grid shape with zero cell space has non-zero size now.

Changes in version 1.6.1 beta (2008-09-24):
--------------------------------------------
- Switched to use wxXmlSerializer 1.1.6:
  - Added support for new (exported) dynamic data containers (CharArray, IntArray, FloatArray, DoubleArray).
  - Fixed bug dealing with reading of float and double values on platforms which use ',' decimal character.

- Added a posibility to interactivelly change ending line points connected to shapes (it means that the connection lines
  do not point to the shape center only anymore). The ending points can be changed by simple placing of the ending line handles somewhere
  over the shape.
- Added new wxSFGridShape which has the same behaviour like classic wxGridSizer known from wxWidgets (it means that its child shapes
  are layouted into a grid defined by number of rows and columns).
- Added virtual function wxSFShapeBase::OnChildDropped(const wxRealPoint& pos, wxSFShapeBase *child) called when other 