@@ -188,7 +188,9 @@ XS_DECLARE_EXPORTED_IO_HANDLER(bool, xsBoolPropIO, WXDLLIMPEXP_XS);
 /*!
  * \brief Property class encapsulating I/O functions used by 'double' properties.
  */
-class WXDLLIMPEXP_XS xsDoublePropIO : public xsPropertyIO
+XS_DECLARE_EXPORTED_IO_HANDLER(double, xsDoublePropIO, WXDLLIMPEXP_XS);
+
+/*class WXDLLIMPEXP_XS xsDoublePropIO : public xsPropertyIO
 {
 public:
 	DECLARE_DYNAMIC_CLASS(xsDoublePropIO);
@@ -197,7 +199,7 @@ public:
 	    // test whether current platform uses '.' or ',' as its decimal point character
 	    if( wxString::Format(wxT("%.2f"), 3.14).Find('.') == wxNOT_FOUND ) m_fChangeDP = true;
 	    else
-            m_fChangeDP = false;
+            m_fChangeDP = false;;
     }
 	virtual ~xsDoublePropIO(){;}
 
@@ -207,14 +209,15 @@ public:
 	static wxString ToString(double value);
 	static double FromString(const wxString& value);
 
-protected:
     static bool m_fChangeDP;
-};
+};*/
 
 /*!
  * \brief Property class encapsulating I/O functions used by 'float' properties.
  */
-class WXDLLIMPEXP_XS xsFloatPropIO : public xsPropertyIO
+XS_DECLARE_EXPORTED_IO_HANDLER(float, xsFloatPropIO, WXDLLIMPEXP_XS);
+
+/*class WXDLLIMPEXP_XS xsFloatPropIO : public xsPropertyIO
 {
 public:
 	DECLARE_DYNAMIC_CLASS(xsFloatPropIO);
@@ -233,9 +236,8 @@ public:
 	static wxString ToString(float value);
 	static float FromString(const wxString& value);
 
-protected:
     static bool m_fChangeDP;
-};
+};*/
 
 /*!
  * \brief Property class encapsulating I/O functions used by 'wxPoint' properties.
